force-app/main/default/objects/rh2__PS_Rollup_Group__c/fields/rh2__Automatic__c.field-meta.xml
<CustomField>
    <fullName>rh2__Automatic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Rollup Group Automatic</description>
    <label>Is Rollup Group Automatic</label>
    <type>Checkbox</type>
</CustomField>