force-app/main/default/objects/rh2__PS_Rollup_Group__c/fields/rh2__Grouping_Method__c.field-meta.xml
<CustomField>
    <fullName>rh2__Grouping_Method__c</fullName>
    <description>Grouping Method</description>
    <label>Grouping Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>