force-app/main/default/objects/rh2__PS_Rollup_Group__c/fields/rh2__Grouping_Value__c.field-meta.xml
<CustomField>
    <fullName>rh2__Grouping_Value__c</fullName>
    <description>Grouping Value</description>
    <label>Grouping Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>